<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sender_background">

    <Button
        android:id="@+id/button_sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:text="@string/button_sender_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/add_button"
        app:layout_constraintBottom_toTopOf="@+id/add_backstack_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sender"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/add_backstack_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_backstack_button"
        app:layout_constraintBottom_toTopOf="@+id/replace_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sender"
        app:layout_constraintVertical_bias="0.783" />

    <Button
        android:id="@+id/replace_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replace_button"
        app:layout_constraintBottom_toTopOf="@+id/replace_backstack_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sender"
        app:layout_constraintVertical_bias="0.811" />

    <Button
        android:id="@+id/replace_backstack_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="408dp"
        android:text="@string/replace_backstack_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sender" />

</androidx.constraintlayout.widget.ConstraintLayout>